package controller;

import model.ShipShop;

public class GameController {
    ShipShop model;

    public GameController(ShipShop model) {
        this.model = model;
    }
}
