package trash.view.panel;

import controller.GameController;
import trash.view.ScreenController;
import model.ShipShop;

import java.util.Observable;
import java.util.ResourceBundle;

public class EraView implements PanelView {

    public EraView(GameController controller, ShipShop model, ScreenController primaryStage) {
    }

    @Override
    public void initialize(ResourceBundle resources) {

    }

    @Override
    public void update(Observable o, Object arg) {

    }
}
