package trash.view.panel;

import java.util.Observable;
import java.util.ResourceBundle;

public class GameView implements PanelView {

    @Override
    public void initialize(ResourceBundle resources) {

    }

    @Override
    public void update(Observable o, Object arg) {

    }
}
