package view.constant;

public class GraphicConstant {
    // Height and Width
    public static int WIDTH_MENU = 400;
    public static int HEIGHT_MENU = 600;
    public static int WIDTH_ERA_TACTIC = 200;
    public static int HEIGHT_ERA_TACTIC = 200;
}
