package view.constant;

public class StringConstant {
    // Application screen title
    public static String APP_TITLE = "ShipShop";

    // Menu title
    public static String MENU_TITLE = "ShipShop";

    // Menu button title
    public static String EXIT_BUTTON = "Exit";
    public static String CONTINUE_BUTTON = "Continue";
    public static String NEW_BUTTON = "New game";

}
