@startuml

package controller{
    class GameController{

    }
}

package trash.view{

    class StringConstant{

    }

    class GraphicConstant{

    }

    class MainObserver{
        + changeCurrentView()
    }


    class LoadView{

    }

    class MainMenu{

    }

    class GameView{

    }

    class TacticView{

    }

    class EraView{

    }

}

class JFrame{

}

class Observer{
    update()
}

class JPanel{

}

MainObserver --> "1" GameController: - controller

MainObserver .up.|> Observer
MainObserver --> "1" JPanel: - currentView
MainObserver --> "1" JFrame: - frame

MainMenu -up-|> JPanel
LoadView -up-|> JPanel
GameView -up-|> JPanel
TacticView -up-|> JPanel
EraView -up-|> JPanel

@enduml